# valley-axis

./: .gitignore  README.md  pyproject.toml  run.py
examples/: valley_axis_demo.ipynb
tests/: test_pipeline.py
valley_axis/: __init__.py  allocation.py  centerlines.py  conversions.py  helpers.py  inputs.py  interface.py  widths.py
valley_axis/centerlines/: __init__.py  annotation.py  conversions.py  derivation.py  flowline_endpoints.py  glacial.py  hierarchy.py  segmentation.py  skeleton.py  topology.py
valley_axis/sample_data/: __init__.py  flowlines.gpkg  flowlines.gpkg-shm  flowlines.gpkg-wal  region.tif
valley_axis/widths/: __init__.py  hierarchical.py  idw.py  interpolation.py  laplace.py  voronoi.py
