[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valley-axis"
version = "0.1.0"
description = "Valley floor centerline extraction and width computation based on the glacial centerlines algorithm."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["geomorphology", "valley", "centerline", "width", "GIS", "raster"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "networkx",
    "rasterio",
    "shapely",
    "geopandas",
    "xarray",
    "rioxarray",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["valley_axis"]

[tool.hatch.build.targets.wheel.shared-data]
"valley_axis/sample_data" = "valley_axis/sample_data"
